# PlantBox

./: .env.example  .gitignore  PlantRecognition.py  PlantRequirements.py  app.py  arduino.ino  main.py  package-lock.json  pyproject.toml
Agent/: PlantRecognition.py  PlantRequirements.py
Common/: __init__.py  cluster_merge.py  dbscan.py  globalstate.py  scheduler.py  serial.py
EnvActuator/: actuator_manager.py  fertilization.py  sunlight.py  temperature.py  watering.py  wind.py
Job/: scan_and_get_req.py
Jobs/: __init__.py  experiment_1.py  experiment_2.py  init_plant_scan.py  job.py  pick.py
MotorContol/: __init__.py  motor_control.py
Sensors/: __init__.py  packed_sensor_input.py  temperature_sensor.py
Yolo/: __init__.py  predict.py
actuator/: __init__.py  actuator_manager.py  sunlight.py  temperature.py
agent/: PlantRequirements.py
common/: __init__.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
legacy/: .gitignore  main.py  main_bak.py  pyproject.toml
legacy/agents/: ChatAgent.py  PlantRecognition.py  PlantRequirements.py
legacy/pages/: camera_and_chat.py  sensors.py
legacy/realtime_legacy/: audio_manager.py  input.pcm  output.pcm  realtime.py  realtime_dialog_client.py
legacy/realtime_legacy/realtime/: config.py  examples.py  realtime.py
utils/: dbscan.py
yolo/: __init__.py  predict.py
