[project]
name = "plantbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cv2-enumerate-cameras>=1.3.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "lap>=0.5.12",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.9",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "serial>=0.0.97",
    "tensorrt>=10.13.3.9",
    "ultralytics>=8.3.202",
]
